# discord-bot

./: .gitignore  README.md  api.py  bot.py  consts.py  generate_title.py  helpers.py  ntlk_download.py  pyproject.toml  requirements.txt  tldr.py
templates/: index.html
